# C-CPP-Base-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt
app/src/: main.cpp
core/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/src/: main.cpp
tests/: CMakeLists.txt
